test restapi added

--- a/controllers/.htaccess
+++ b/controllers/.htaccess
@@ -2,7 +2,7 @@
 
 RewriteEngine On
 
-RewriteBase /controller/
+RewriteBase /controllers/
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-s
