Deleted imported JWT github repo . will plan to re-integrate jWT later

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "facebook/php-sdk-v4": "^5.1",
-        "firebase/php-jwt": "^3.0"
+        "firebase/php-jwt": "^3.0",
+        "lcobucci/jwt": "^3.1",
+        "gamegos/jwt": "^0.1.1"
     }
 }
